CodeFramework/objects/Application_Log__c.object
<CustomObject>
    <description>Purpose of this Object is to hold the application logs which can be used for debugging/audting</description>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>The Name of the Application which Logged this Error/Exception</description>
        <inlineHelpText>The Name of the Application which Logged this Error/Exception</inlineHelpText>
        <label>Application Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Name of the Class that logged this Error/Exception Message</description>
        <inlineHelpText>Name of the Class that logged this Error/Exception Message</inlineHelpText>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Description of the Error/Exception</description>
        <inlineHelpText>Description of the Error/Exception</inlineHelpText>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <label>Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Name of the Method in the Class that fired this Error/Exception</description>
        <inlineHelpText>Name of the Method in the Class that fired this Error/Exception</inlineHelpText>
        <label>Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception_Reason__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>